Finished design detail fragm

--- a/app/src/main/res/layout/fragment_note_detail.xml
+++ b/app/src/main/res/layout/fragment_note_detail.xml
@@ -1,12 +1,28 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="es.telefonica.talentum.noteapp.NoteDetailFragment"
     android:background="@android:color/holo_green_light"
+    android:padding="5dp"
     >
 
 
+    <EditText
+        android:id="@+id/fragment_note_detail_title_text"
+        android:hint="Enter note title"
+        android:background="#FFBB00"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"/>
 
-
-</FrameLayout>
+    <EditText
+        android:id="@+id/fragment_note_detail_description"
+        android:hint="Enter note description"
+        android:background="#FFBC49"
+        android:gravity="top|left"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/fragment_note_detail_title_text"/>
+</RelativeLayout>
