--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -12,6 +12,7 @@
 
 
     <fragment
+        android:id="@+id/fragment_note_list"
         android:name="es.telefonica.talentum.noteapp.NoteListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
